Make metadata cumulative, remove sourceMetadata from the Action Input interfaces